chore(dockerfile): delete java arg -XX:+UseCGroupMemoryLimitForHeap
related to #REV-8362